# dictation-app-windows

./: .gitignore  CLAUDE.md  build.bat  package-lock.json  package.json
.github/workflows/: release.yml
src/: app.js  index.html  overlay.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  batch.rs  hotkey.rs  main.rs  models.rs  paste.rs  settings.rs  text_cleaner.rs  transcriber.rs  translator.rs
